<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, AuguraClient!</string>
	<string name="app_name">Asiaction Mobile</string>
	<string name="login_error_1">Please enter valid username.</string>
	<string name="login_error_3">Username must be valid email address.</string>
	<string name="login_error_2">Please enter valid password.</string>
	<string name="login_error_4">Password must contain atleast 8 characters.
	</string>
	<string name="login_error_header">UNABLE TO LOGIN</string>
	<string name="login_waiting_login">Please waiting for logging in</string>
	<string name="first_screen_text">Login your account with the same data you use in
		your
		website access.</string>

	<string name="login_screen_ok">OK</string>
	<string name="title">Asiaction Mobile</string>

	<string name="add_project">Add Project</string>
	<string name="yourcard_client">CLIENT</string>

	<string name="query">Query</string>

	<string name="cancel">Cancel</string>
	<string name="not_null_query">Please input project info!</string>


	<string name="error_create_pic_dir">Can\'t create picture local
		directory</string>
	<string name="error_load_project">Load project data error
	</string>
	<string name="delete_checkpoint_confirm"> Do you want to delete this checkpoint\?</string>
	<string name="delete_checkpoint_confirm_title">Confirmation</string>
	<string name="delete_checkpoint_confirm_button">Confirm</string>
	<string name="delete_checkpoint_confirm_button_cancel">Cancel</string>

	<string name="create_checkpoint">Create</string>
	<string name="update_checkpoint">Update</string>

	<string name="add_checkpoint">Add Checkpoint</string>

	<string name="order_information_required">Someting field missing</string>
	<string name="order_photo_tips">Press to show full screen</string>
	<string name="can_not_find_project">Don\'t find any project\.</string>

	<string name="return_sy"> &#60;&#60;</string>

	<string name="menu_quit"> Quit</string>
	<string name="menu_setting"> Setting</string>
	<string name="menu_delete"> Delete</string>
	<string name="show_menu"> bb </string>

	<string name="select_photo"> Take Photo</string>
	
	<string name="setting_user_name">User Name</string>
	<string name="setting_user_pwd">Password</string>
	<string name="setting_API">API</string>
	<string name="setting_button">Setting</string>
	
	<string name="order_detal_qc_comment">QC Comment:</string>
	<string name="order_detal_qc_date">QC Date:</string>
	<string name="order_detal_qc_checked">Quantity Checked:</string>
	<string name="order_detal_qc_status">QC Status:</string>
	<string name="order_detal_date_picker_title">Select Date</string>
</resources>
