<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="@color/main_background" android:orientation="vertical"
	android:gravity="top">

	<RelativeLayout android:layout_width="match_parent"
		android:layout_height="0dp" android:layout_weight="1"
		android:background="@color/content_background" android:orientation="vertical"
		android:paddingBottom="10dip" android:paddingTop="10dip"
		android:gravity="center">


		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/name_lin"
			>

			<TextView android:id="@+id/tv_user_name"
				android:layout_width="100dp" android:layout_height="wrap_content"
				android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
				android:layout_marginTop="5dip" android:gravity="center"
				android:inputType="text" android:textColor="@color/login_text_color"
				android:textSize="12sp" android:text="@string/setting_user_name"
				android:layout_gravity="center" />


			<EditText android:id="@+id/ed_name"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip" android:layout_marginTop="5dip"
				android:background="@drawable/login_screen_button" android:gravity="center"
				android:inputType="number" android:textColor="@color/login_text_color"
				android:textSize="12sp" />
		</LinearLayout>
		
		
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/pwd_lin"
			android:layout_below="@+id/name_lin">

			<TextView android:id="@+id/tv_pwd"
				android:layout_width="100dp" android:layout_height="wrap_content"
				android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
				android:layout_marginTop="5dip" android:gravity="center"
				android:inputType="text" android:textColor="@color/login_text_color"
				android:textSize="12sp" android:text="@string/setting_user_pwd"
				android:layout_gravity="center" />


			<EditText android:id="@+id/ed_pwd"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip" android:layout_marginTop="5dip"
				android:background="@drawable/login_screen_button" android:gravity="center"
				android:inputType="text" android:textColor="@color/login_text_color"
				android:textSize="12sp" />
		</LinearLayout>
		
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/api_lin"
			android:layout_below="@+id/pwd_lin">

			<TextView android:id="@+id/tv_api"
				android:layout_width="100dp" android:layout_height="wrap_content"
				android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
				android:layout_marginTop="5dip" android:gravity="center"
				android:inputType="text" android:textColor="@color/login_text_color"
				android:textSize="12sp" android:text="@string/setting_API"
				android:layout_gravity="center" />


			<EditText android:id="@+id/ed_api"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip" android:layout_marginTop="5dip"
				android:background="@drawable/login_screen_button" android:gravity="center"
				android:inputType="text" android:textColor="@color/login_text_color"
				android:textSize="12sp" />
		</LinearLayout>
		
		
		
		<LinearLayout android:id="@+id/ok_button_lin"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_below="@+id/api_lin"  android:layout_marginTop="5dip"
			android:background="@color/add_project_background" android:gravity="center"
			android:measureWithLargestChild="false" android:orientation="horizontal">

			<TextView android:id="@+id/setting_button" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/setting_button"
				android:textColor="@color/selected_tab" android:textSize="24sp"
				android:textStyle="bold" />

		</LinearLayout>






	</RelativeLayout>
</LinearLayout>

