<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:gravity="top">
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_background"
    android:gravity="center" >

    <TextView
        android:id="@+id/your_card_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/font_color"
        android:textColorLink="@color/font_color"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@color/content_background"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingTop="10dip" >

<TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/login_text"
    android:text="@string/first_screen_text"
    android:layout_marginLeft="25dip"
     android:layout_marginRight="25dip"
     android:layout_marginBottom="10dip"
    android:textSize="18sp"
    android:textStyle="bold"
    android:gravity="center"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/first_screen_text"/>
<EditText android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:layout_marginLeft="40dip"
     android:layout_marginRight="40dip"
     android:layout_marginTop="5dip"
     android:textSize="12sp"
     android:textColor="@color/login_text_color"
     android:text="android"
     android:inputType="textEmailAddress"
     android:gravity="center"
     android:background="@drawable/login_screen_button"
     android:layout_below="@+id/first_screen_text"
     android:layout_centerHorizontal="true"
	 android:id="@+id/login_text"/>
<EditText android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:layout_marginLeft="40dip"
     android:layout_marginRight="40dip"
     android:textSize="12sp"
     android:inputType="text"
     android:text="android"
     android:textColor="@color/login_text_color"
     android:layout_marginTop="5dip"
     android:gravity="center"
     android:background="@drawable/login_screen_button"
     android:layout_below="@+id/login_text"
     android:id="@+id/password_text"/>

<LinearLayout
    android:id="@+id/ok_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password_text"
    android:layout_marginLeft="40dip"
    android:layout_marginRight="40dip"
    android:layout_marginTop="5dip"
    android:background="@color/add_project_background"
    android:gravity="center" >

<TextView
    android:id="@+id/ok_button_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login_screen_ok"
    android:textColor="@color/selected_tab"
    android:textSize="24sp"
    android:textStyle="bold" />

</LinearLayout>
<LinearLayout android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:layout_centerVertical="true"
     android:layout_marginTop="5dip"
     android:gravity="center"
     android:background="@drawable/login_screen_question"
     android:layout_below="@+id/login_text"
     android:id="@+id/forgot_password">
</LinearLayout>
</RelativeLayout>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="left"
    android:baselineAligned="false">

</LinearLayout>
</LinearLayout>

