<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/content_background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/content_background"
        android:gravity="top"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/headerlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background" >

            <TextView
                android:id="@+id/orderItemTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/title"
                android:textColor="@color/font_color"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/checkpointReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_sy"
                    android:textColor="@color/font_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/blank_background" >

            <ImageView
                android:id="@+id/projectItemPhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/itemOrderQuntity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/projectItemPhoto"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemOrderDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemOrderQuntity"
                android:layout_toRightOf="@id/projectItemPhoto"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemOrderQT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/projectItemPhoto"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemOrderComment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemOrderQT"
                android:textSize="12sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/projectOrderCheckpointList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/bottom_add_checpoint_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/add_project_background"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/bottom_add_checpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/add_project_background"
                android:text="@string/add_checkpoint"
                android:textColor="@color/selected_tab"
                android:textSize="14sp"
                android:textStyle="bold" />
            </LinearLayout>

    </LinearLayout>

</ScrollView>